grader: show SKIPPED for subtasks without submitted files in OO problems (#658)